SERVER-39934 Fix locking for slow ops storage stats SERVER-39654 Make slow ops storage stats work with transactions